--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.9.0",
+    "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-parallax-tilt": "^1.7.245",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
