--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.245",
+    "react-player": "^2.16.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
