--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.13",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
