--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.7.1",
     "@types/react-slick": "^0.23.13",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
@@ -20,7 +21,8 @@
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
